[gd_scene load_steps=3 format=3 uid="uid://d3ve51ir527g0"]

[ext_resource type="Script" path="res://shop/sold_item/sold_item.gd" id="1_nvte5"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pd2rr"]
size = Vector2(64, 64)

[node name="sold_item" type="AspectRatioContainer"]
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("1_nvte5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_pd2rr")

[node name="Button" type="Button" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
flat = true

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
